# fontations

./: Cargo.toml
glyph-load/: Cargo.toml  ins_out.txt
glyph-load/ftcmp/: Cargo.toml  bench.txt  bench2.txt  bench3.txt  ftcmp_out.txt
glyph-load/ftcmp/.cargo/: config
glyph-load/ftcmp/src/: main.rs
glyph-load/src/: lib.rs  main.rs  truetype.rs
glyph-load/src/truetype/: cache.rs  hint.rs  load.rs  math.rs
punchcut/src/source/glyf/: deltas.rs
read-fonts/src/: table_provider.rs
read-fonts/src/tables/: glyf.rs  gvar.rs
skrifa/src/color/: mod.rs  transform.rs  traversal.rs
skrifa/src/color/traversal_tests/: mod.rs
