[package]
name = "ftcmp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
font-types = { version = "0.0.2", path = "../../font-types" }
freetype-rs = "0.31.0"
glob = "0.3.0"
glyph-load = { path = "../" }
